--- a/index.html
+++ b/index.html
@@ -1,12 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Developer Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <header>
+        <ul class="header">
+            <li><a href="html/home.html">Home</a></li>
+            <li><a target="_blank" href="html/cotact.html">Contact</a></li>
+            <li><a href="html/about-me.html">About Me</a></li>
+            <li><a href="html/sing-up.html">Sing up</a></li>
+        </ul>
+    </header>
+    <section>
+        <div class="text-white section1 bgimg">
+            <h1 class="text-larg">Welcome To My</h1>
+            <h1><span class="color-orange">Portfolio Website</span></h1>
+            <h4>আমি একজন পুচকা ওয়েব ডেভেলপার</h4>
+            <p class="wordstyle">আপনি আমাকে লাফ দিতে, ভবনে উঠতে এবং ট্রেন থামাতে দেখেছেন। কিন্তু সেই কাজের জন্য কেউ
+                আমাকে এক পয়সাও দেয়
+                না। তাই আমি ওয়েব ডেভেলপমেন্ট শিখছি এবং আয়ত্ত করছি। আমি ওয়েব ডেভেলপমেন্ট হিরো না হওয়া পর্যন্ত থামব
+                না।</p>
+            <a class="linkbutton" target="-blank" href="https://www.linkedin.com/in/partho-adhikary-b692b6217/">Hire
+                Me</a>
+        </div>
+        <div class="section1">
+            <img src="images/my-bg1.png" alt="">
+        </div>
+    </section>
+    <section>
+        <div class="section1">
+            <img id="dreamimg" src="images/deramimg_.jpg" alt="">
+        </div>
+        <div class="section1 dreamback">
+            <h1 class="text-larg">Dream Big</h1>
+            <h4>Become a web developer</h4>
+            <p id="dreamtext" class="wordstyle">আমি ইতিমধ্যে প্রাথমিক HTML এবং CSS শিখেছি। আমি যেকোন সহজ ওয়েবসাইট
+                বানাতে পারি। আমি
+                এমনকি আমার ঠাকুরমাকে শেখাতে পারি কিভাবে সহজ ওয়েবসাইট তৈরি করতে হয়। আমার লক্ষ্য হল 3টি ওয়েবসাইট তৈরি
+                করা এবং উন্নত বিষয়গুলি শেখা।</p>
+            <a class="linkbutton" download="ParthoCV" href="download/Partho Adhikary_cv.pdf">DOWNLOAD RESUME</a>
+        </div>
+    </section>
 </body>
+
 </html>
