--- a/index.html
+++ b/index.html
@@ -42,13 +42,29 @@
             <img id="dreamimg" src="images/deramimg_.jpg" alt="">
         </div>
         <div class="section1 dreamback">
-            <h1 class="text-larg">Dream Big</h1>
-            <h4>Become a web developer</h4>
+            <h1 id="dreamh4" class="text-larg">Dream Big</h1>
+            <h4 id="dreamh4">Become a web developer</h4>
             <p id="dreamtext" class="wordstyle">আমি ইতিমধ্যে প্রাথমিক HTML এবং CSS শিখেছি। আমি যেকোন সহজ ওয়েবসাইট
                 বানাতে পারি। আমি
                 এমনকি আমার ঠাকুরমাকে শেখাতে পারি কিভাবে সহজ ওয়েবসাইট তৈরি করতে হয়। আমার লক্ষ্য হল 3টি ওয়েবসাইট তৈরি
                 করা এবং উন্নত বিষয়গুলি শেখা।</p>
             <a class="linkbutton" download="ParthoCV" href="download/Partho Adhikary_cv.pdf">DOWNLOAD RESUME</a>
+        </div>
+    </section>
+    <section class="experience">
+        <h1>Experience</h1>
+        <div>
+            <h1>Full Stack Developer</h1>
+            <h3>2022-Present | Pro Level Developer</h3>
+            <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
+                efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue
+                JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+        </div>
+        <div>
+            <h1>Baby Web Developer</h1>
+            <h3>2022-2024 | Programming Hero Learner</h3>
+            <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed
+                it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
         </div>
     </section>
 </body>
