--- a/index.html
+++ b/index.html
@@ -21,12 +21,13 @@
             <li><a href="html/sing-up.html">Sing up</a></li>
         </ul>
     </header>
-    <section>
+    <section class="flexdiv">
         <div class="text-white section1 bgimg">
             <h1 class="text-larg">Welcome To My</h1>
-            <h1><span class="color-orange">Portfolio Website</span></h1>
+            <h1><span class="color-orange font50">Portfolio Website</span></h1>
             <h4>আমি একজন পুচকা ওয়েব ডেভেলপার</h4>
-            <p class="wordstyle">আপনি আমাকে লাফ দিতে, ভবনে উঠতে এবং ট্রেন থামাতে দেখেছেন। কিন্তু সেই কাজের জন্য কেউ
+            <p class="wordstyle boxshadow">আপনি আমাকে লাফ দিতে, ভবনে উঠতে এবং ট্রেন থামাতে দেখেছেন। কিন্তু সেই কাজের
+                জন্য কেউ
                 আমাকে এক পয়সাও দেয়
                 না। তাই আমি ওয়েব ডেভেলপমেন্ট শিখছি এবং আয়ত্ত করছি। আমি ওয়েব ডেভেলপমেন্ট হিরো না হওয়া পর্যন্ত থামব
                 না।</p>
@@ -37,34 +38,41 @@
             <img src="images/my-bg1.png" alt="">
         </div>
     </section>
-    <section>
+    <section class="flexdiv">
         <div class="section1">
             <img id="dreamimg" src="images/deramimg_.jpg" alt="">
         </div>
         <div class="section1 dreamback">
-            <h1 id="dreamh4" class="text-larg">Dream Big</h1>
+            <h1 class="text-larg">Dream Big</h1>
             <h4 id="dreamh4">Become a web developer</h4>
-            <p id="dreamtext" class="wordstyle">আমি ইতিমধ্যে প্রাথমিক HTML এবং CSS শিখেছি। আমি যেকোন সহজ ওয়েবসাইট
+            <p id="dreamtext" class="wordstyle boxshadow">আমি ইতিমধ্যে প্রাথমিক HTML এবং CSS শিখেছি। আমি যেকোন সহজ
+                ওয়েবসাইট
                 বানাতে পারি। আমি
                 এমনকি আমার ঠাকুরমাকে শেখাতে পারি কিভাবে সহজ ওয়েবসাইট তৈরি করতে হয়। আমার লক্ষ্য হল 3টি ওয়েবসাইট তৈরি
                 করা এবং উন্নত বিষয়গুলি শেখা।</p>
             <a class="linkbutton" download="ParthoCV" href="download/Partho Adhikary_cv.pdf">DOWNLOAD RESUME</a>
         </div>
     </section>
-    <section class="experience">
-        <h1>Experience</h1>
-        <div>
-            <h1>Full Stack Developer</h1>
-            <h3>2022-Present | Pro Level Developer</h3>
-            <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
-                efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue
-                JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
-        </div>
-        <div>
-            <h1>Baby Web Developer</h1>
-            <h3>2022-2024 | Programming Hero Learner</h3>
-            <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed
-                it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+    <section class="experience text-white">
+        <h1 class="font50" id="exp">Experience</h1>
+        <div class="flexdiv">
+            <div id="expimg" class="newexp boxshadow">
+                <h1>Full Stack Developer</h1>
+                <h3 class="color-orange">2022-Present | Pro Level Developer</h3>
+                <p class="wordstyle">I am the master of HTML, CSS and Javascript. I know everything needed to make a
+                    website function,
+                    efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called
+                    Vue
+                    JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+            </div>
+            <div class="newexp boxshadow">
+                <h1>Baby Web Developer</h1>
+                <h3 class="color-orange">2022-2024 | Programming Hero Learner</h3>
+                <p class="wordstyle">They didn't offer me a job. But I made myself as a remove web developer. I made
+                    their website and
+                    showed
+                    it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+            </div>
         </div>
     </section>
 </body>
