--- a/html/about-me.html
+++ b/html/about-me.html
@@ -1,12 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me</title>
+    <link rel="shortcut icon" href="../images/icon.png" type="image/x-icon">
 </head>
+
 <body>
-    
+    <div>
+        <h2>About me</h2>
+        Hi there I am Partho Adhikary. I am from Bangladesh. I am 24 years old. <br>
+    </div>
+
+    <div>
+        <h3>My educational qulification</h3>
+        <ol>
+            <li>SSC 2012</li>
+            <li>HSC 2014</li>
+            <li>B.Com 2017</li>
+            <li>MBA (runing)</li>
+        </ol>
+        <h3>My favorute Player</h3>
+        <ul>
+            <li>Tamim Iqbal</li>
+            <li>Liton Das</li>
+            <li>Musfiqure Rahim</li>
+            <li>Mastafijur Rahaman</li>
+            <li><i><del>Saymma Sarkar</del></i></li>
+        </ul>
+    </div>
+
+
 </body>
+
 </html>
