--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Developer Portfolio</title>
+    <link rel="shortcut icon" href="images/icon.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
@@ -15,8 +16,8 @@
 <body>
     <header>
         <ul class="header">
-            <li><a href="html/home.html">Home</a></li>
-            <li><a target="_blank" href="html/cotact.html">Contact</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a target="_blank" href="https://www.facebook.com/partho.adhikary.150">Contact</a></li>
             <li><a href="html/about-me.html">About Me</a></li>
             <li><a href="html/sing-up.html">Sing up</a></li>
         </ul>
