--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 <body>
     <header>
         <ul class="header">
+            <img id="logo" width="50px" src="images/icon.png" alt="">
+            <span id="logo-name">Partho Adhikary</span>
             <li><a href="index.html">Home</a></li>
             <li><a target="_blank" href="https://www.facebook.com/partho.adhikary.150">Contact</a></li>
             <li><a href="html/about-me.html">About Me</a></li>
@@ -44,7 +46,7 @@
             <img id="dreamimg" src="images/deramimg_.jpg" alt="">
         </div>
         <div class="section1 dreamback">
-            <h1 class="text-larg">Dream Big</h1>
+            <h1 class="text-larg text-white">Dream Big</h1>
             <h4 id="dreamh4">Become a web developer</h4>
             <p id="dreamtext" class="wordstyle boxshadow">আমি ইতিমধ্যে প্রাথমিক HTML এবং CSS শিখেছি। আমি যেকোন সহজ
                 ওয়েবসাইট
@@ -76,6 +78,9 @@
             </div>
         </div>
     </section>
+    <footer>
+        © Partho Adhikary 2021, a Programming Hero initiative.
+    </footer>
 </body>
 
 </html>
