--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 বানাতে পারি। আমি
                 এমনকি আমার ঠাকুরমাকে শেখাতে পারি কিভাবে সহজ ওয়েবসাইট তৈরি করতে হয়। আমার লক্ষ্য হল 3টি ওয়েবসাইট তৈরি
                 করা এবং উন্নত বিষয়গুলি শেখা।</p>
-            <a class="linkbutton" download="ParthoCV.pdf" href="download/Partho Adhikary_cv.pdf">DOWNLOAD RESUME</a>
+            <a class="linkbutton" download="download" href="download/Partho Adhikary_cv.pdf">DOWNLOAD RESUME</a>
         </div>
     </section>
     <section class="experience text-white">
